GPLIM-3937 Added clean target because of Java 8 compiler bug